5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4190/executions/1807_2572.log
== TEST (2019-06-11 22:13:36) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(m, dtype=int)

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
for i in range(size(v)):
	v[0] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:15:09) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
for i in range(size(v)):
	v[0] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:18:51) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
for i in range(size(v)):
	v[0] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:20:08) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	k[0] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:20:23) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	k[0] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:20:46) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	k[i] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:22:30) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2==0:
		v[0] = v[0]+1
#k = zeros(size(v))

#for i in range(size(v)):
#	k[i] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:24:07) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
#k = zeros(size(v))

#for i in range(size(v)):
#	k[i] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:24:41) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	k[0] = v[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:24:52) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	k[0] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:25:52) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(m)):
	k[0] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:26:09) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(m)):
	k[i] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:26:30) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(m)):
	k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:27:00) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
#k = zeros(size(v))

for i in range(size(m)):
	v[i] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:29:36) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
	k[i] = m[i]
print(k)
-- ERROR:
File "XXXX", line 13
    k[i] = m[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:29:50) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
	k[0] = m[i]
print(k)
-- ERROR:
File "XXXX", line 13
    k[0] = m[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:30:29) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		k[0] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:31:01) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:31:54) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
#k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		v[i] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:35:06) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in v:
	k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:35:29) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in v:
	k[0] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:35:52) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in v:
	k = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:37:22) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(m)):
	k[i] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:38:36) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1

for i in range(size(m)):
	v[i] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:40:38) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v), dtype=int)

for i in range(size(m)):
	k[i] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:41:35) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v), dtype=int)

for i in range(size(m)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:42:58) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v), dtype=int)

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:43:36) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(v)

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:44:47) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:45:21) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[0] = v[0]+1
#k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		v[i] = m[i]
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:46:14) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[i] = v[i]+1
k = zeros(size(v))

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:49:39) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[i] = v[i]+1
k = zeros(size(v))

for i in v:
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:57:58) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[i] = v[i]+1
k = zeros(size(v))

for i in range(size(v)):
	if v[i]!=0:
		k[0] = v[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 22:58:54) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = zeros(size(m))

for i in range(size(m)):
	if m[i]%2!=0:
		v[i] = v[i]+1
k = zeros(size(v))

for i in range(size(v)):
	if v[i]!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:09:31) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)

for i in range(size(v)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:11:18) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)

for i in range(size(v)):
	if m[i]%2!=0:
		k[0] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:11:58) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)
t = 0
for i in range(size(v)):
	if m[i]%2!=0:
		k[t] = m[i]
		t = t+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:13:27) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)

for i in range(size(m)):
	if m[i]%2!=0:
		k[0] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:14:08) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)

for i in range(size(m)):
	if m[i]%2!=0:
		k[i] = m[i]
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 23:14:56) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)
t = 0
for i in range(size(m)):
	if m[i]%2!=0:
		k[t] = m[i]
		t = t+1
print(k)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 23:15:11) 
-- CODE:
from numpy import *

m = array(eval(input('Matricula: ')))
v = 0

for i in range(size(m)):
	if m[i]%2!=0:
		v = v+1
k = zeros(v, dtype=int)
t = 0
for i in range(size(m)):
	if m[i]%2!=0:
		k[t] = m[i]
		t = t+1
print(k)
-- EXECUTION TIME:
1.0245
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
